trying some page scrolls

--- a/index.css
+++ b/index.css
@@ -77,3 +77,24 @@ body {
 .container > div ul li a:hover {
     text-decoration: underline;
 }
+
+.scroll-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(39, 174, 96, 0.7);
+    border: none;
+    color: white;
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 999;
+}
+
+.left-button {
+    left: 0;
+}
+
+.right-button {
+    right: 0;
+}
