--- a/index.css
+++ b/index.css
@@ -1,13 +1,12 @@
-
 body {
-    background-color: rgb(144, 148, 148);
+  
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
 }
 
 
-.container {
+..container {
     text-align: center;
     max-width: 850px;
     margin: 0 auto;
@@ -17,7 +16,7 @@ body {
 
 .heading {
     display: inline-block;
-    font-size: 40px;
+    font-size: 70px;
     color: rgb(239, 239, 241);
     background-color: rgb(39, 174, 96);
     border: 2px solid rgb(239, 239, 241);
@@ -30,38 +29,39 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.container > div {
+..container > div {
+    width: 1000px;
     margin-top: 50px;
-    padding: 20px;
-    background-color: rgb(239, 239, 241);
-    border: 2px solid rgb(239, 239, 241);
+    padding: 150px 10px;
+    background-color: rgba(239, 239, 241, 0.918);
+    border: 20px solid rgb(239, 239, 241);
     border-radius: 15px;
     text-align: left;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 
-.container > div h2 {
-    font-size: 30px;
+..container > div h2 {
+    font-size: 50px;
     color: rgb(70, 130, 180);
     margin-top: 20px;
 }
 
 
-.container > div p {
-    font-size: 18px;
+..container > div p {
+    font-size: 22px;
     color: rgb(70, 70, 70);
     margin-top: 10px;
     line-height: 1.6;
 }
 
 
-.container > div ul {
+..container > div ul {
     list-style-type: disc; 
     padding: 0;
 }
 
-.container > div ul li {
+..container > div ul li {
     font-size: 18px;
     color: rgb(70, 70, 70);
     margin-top: 10px;
@@ -69,32 +69,12 @@ body {
 }
 
 
-.container > div ul li a {
+..container > div ul li a {
     color: rgb(39, 174, 96);
     text-decoration: none;
 }
 
-.container > div ul li a:hover {
+..container > div ul li a:hover {
     text-decoration: underline;
 }
 
-.scroll-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(39, 174, 96, 0.7);
-    border: none;
-    color: white;
-    font-size: 24px;
-    padding: 10px;
-    cursor: pointer;
-    z-index: 999;
-}
-
-.left-button {
-    left: 0;
-}
-
-.right-button {
-    right: 0;
-}
