--- a/updated.css
+++ b/updated.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Micro+5+Charted&display=swap');
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -24,13 +25,55 @@ section {
     background-color: rgb(0, 0, 0); /* Set section background color to black */
 }
 
+section h1 {
+    font-size: 85px;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); /* Add a subtle text shadow */
+}
+
+
 section p {
     margin-top: 30px;
     line-height: 30px;
     width: 85%;
     text-align: justify;
+
 }
 
-section h1, section h2 {
-    color: rgb(255, 255, 255); /* Set heading text color to white */
+section h2 {
+    color: rgb(255, 255, 255);
+    font-size: 65px; 
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); /* Add a subtle text shadow */
+
+}
+
+.project-description h2 {
+    text-align: center;
+}
+
+.project-description p {
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+}
+.project-objective ul {
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+}
+.project-challenges ul {
+    margin-left: 50px;
+    font-size: 20px;
+    text-align: left;
+}
+.project-overcomings ul {
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+}
+.inspiration a{
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+    color: aliceblue;
 }
