--- a/updated.css
+++ b/updated.css
@@ -9,8 +9,8 @@
 body {
     display: flex;
     overflow-y: hidden;
-    background-color: rgb(0, 0, 0); /* Set body background color to black */
-    color: rgb(255, 255, 255); /* Set default text color to white */
+    background-color: rgb(16, 15, 15); 
+    color: rgb(255, 255, 255); 
 }
 
 section {
@@ -21,14 +21,14 @@ section {
     height: 100vh;
     width: 100%;
     flex: none;
-    overflow-y: auto; /* Enable vertical scrolling if content overflows */
-    background-color: rgb(0, 0, 0); /* Set section background color to black */
+    overflow-y: auto; 
+    background-color: rgb(13, 13, 13); 
 }
 
 section h1 {
-    font-size: 85px;
+    font-size: 95px;
     color: rgb(255, 255, 255);
-    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); /* Add a subtle text shadow */
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); 
 }
 
 
@@ -43,7 +43,7 @@ section p {
 section h2 {
     color: rgb(255, 255, 255);
     font-size: 65px; 
-    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); /* Add a subtle text shadow */
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); 
 
 }
 
@@ -52,7 +52,7 @@ section h2 {
 }
 
 .project-description p {
-    margin-left: 50px;
+    margin-left: 200px;
     font-size: 25px;
     text-align: left;
 }
@@ -76,4 +76,57 @@ section h2 {
     font-size: 25px;
     text-align: left;
     color: aliceblue;
+}
+.contributers {
+    padding-top: 10px; 
+    border-top: 1px solid #000; 
+}
+
+.contributers > h2 {
+    margin-top: 0; 
+}
+
+.names {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.names div {
+    text-align: center;
+    flex: 1;
+    margin: 0 10px;
+    width: 400px;
+
+}
+
+
+
+
+.scroll-container {
+    display: flex;
+    overflow-x: auto; 
+    scroll-behavior: smooth; 
+    height: 100vh;
+}
+
+.scroll-button {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(46, 46, 46, 0.5);
+    color: white;
+    border: none;
+    padding: 15px;
+    font-size: 35px;
+    cursor: pointer;
+    z-index: 999; 
+}
+
+.scroll-button.left {
+    left: 10px;
+}
+
+.scroll-button.right {
+    right: 10px;
 }
