--- a/index.css
+++ b/index.css
@@ -1,16 +1,16 @@
 body {
   
-    margin: 0;
+    margin: 1px;
     padding: 0;
     font-family: Arial, sans-serif;
 }
 
 
-.container {
+.container  h1{
     text-align: center;
-    max-width: 850px;
     margin: 0 auto;
     padding: 20px;
+    background-color: bisque;
 }
 
 
@@ -30,10 +30,10 @@ body {
 }
 
 .container > div {
-    width: 1000px;
+    /* width: 500px; */
     margin-top: 50px;
     padding: 150px 10px;
-    background-color: rgba(239, 239, 241, 0.918);
+    background-color: rgba(161, 163, 129, 0.918);
     border: 20px solid rgb(239, 239, 241);
     border-radius: 15px;
     text-align: left;
