--- a/updated.css
+++ b/updated.css
@@ -55,6 +55,7 @@ section h2 {
     margin-left: 200px;
     font-size: 25px;
     text-align: left;
+    width: 1000px;
 }
 .project-objective ul {
     margin-left: 50px;
@@ -65,6 +66,7 @@ section h2 {
     margin-left: 50px;
     font-size: 20px;
     text-align: left;
+    width: 1300px;
 }
 .project-overcomings ul {
     margin-left: 50px;
@@ -100,6 +102,59 @@ section h2 {
 
 }
 
+
+
+
+
+.assets {
+    text-align: center;
+}
+
+.assets > h2 {
+    margin-top: 0;
+}
+
+.image-container {
+    margin-top: 10px;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    padding: 5px;
+    padding-right: 5px;
+}
+
+.row img {
+    margin: 0px 5px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 10px;
+    width: 200px; /* Adjust image width as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.row p {
+    margin-top: 5px;
+    font-style: italic;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+
+.live button {
+    /* width: 200px; */
+    height: 100px;
+    font-size: 55px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 100;
+    font-style: italic;
+    box-shadow: 5px white;
+    border: 20px;
+    border-radius: 45px;
+    cursor: pointer;
+}
 
 
 
