--- a/index.css
+++ b/index.css
@@ -1,80 +1,187 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Micro+5+Charted&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+
 body {
-  
-    margin: 1px;
-    padding: 0;
-    font-family: Arial, sans-serif;
+    display: flex;
+    overflow-y: hidden;
+    background-color: rgb(16, 15, 15); 
+    color: rgb(255, 255, 255); 
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    flex: none;
+    overflow-y: auto; 
+    background-color: rgb(13, 13, 13); 
+}
+
+section h1 {
+    font-size: 95px;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); 
 }
 
 
-.container  h1{
+section p {
+    margin-top: 30px;
+    line-height: 30px;
+    width: 85%;
+    text-align: justify;
+
+}
+
+section h2 {
+    color: rgb(255, 255, 255);
+    font-size: 65px; 
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.5); 
+
+}
+
+.project-description h2 {
     text-align: center;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: bisque;
 }
 
-
-.heading {
-    display: inline-block;
-    font-size: 70px;
-    color: rgb(239, 239, 241);
-    background-color: rgb(39, 174, 96);
-    border: 2px solid rgb(239, 239, 241);
-    border-radius: 15px;
-    padding: 10px 20px;
-    margin-top: 50px;
-    max-width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.container > div {
-    /* width: 500px; */
-    margin-top: 50px;
-    padding: 150px 10px;
-    background-color: rgba(161, 163, 129, 0.918);
-    border: 20px solid rgb(239, 239, 241);
-    border-radius: 15px;
+.project-description p {
+    margin-left: 200px;
+    font-size: 25px;
     text-align: left;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 1000px;
+}
+.project-objective ul {
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+}
+.project-challenges ul {
+    margin-left: 50px;
+    font-size: 20px;
+    text-align: left;
+    width: 1300px;
+}
+.project-overcomings ul {
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+}
+.inspiration a{
+    margin-left: 50px;
+    font-size: 25px;
+    text-align: left;
+    color: aliceblue;
+}
+.contributers {
+    padding-top: 10px; 
+    border-top: 1px solid #000; 
+}
+
+.contributers > h2 {
+    margin-top: 0; 
+}
+
+.names {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.names div {
+    text-align: center;
+    flex: 1;
+    margin: 0 10px;
+    width: 400px;
+
 }
 
 
-.container > div h2 {
-    font-size: 50px;
-    color: rgb(70, 130, 180);
-    margin-top: 20px;
+
+
+
+.assets {
+    text-align: center;
 }
 
+.assets > h2 {
+    margin-top: 0;
+}
 
-.container > div p {
-    font-size: 22px;
-    color: rgb(70, 70, 70);
+.image-container {
     margin-top: 10px;
-    line-height: 1.6;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    padding: 5px;
+    padding-right: 5px;
+}
+
+.row img {
+    margin: 0px 5px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 10px;
+    width: 200px; /* Adjust image width as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.row p {
+    margin-top: 5px;
+    font-style: italic;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 
-.container > div ul {
-    list-style-type: disc; 
-    padding: 0;
+.live button {
+    /* width: 200px; */
+    height: 100px;
+    font-size: 55px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 100;
+    font-style: italic;
+    box-shadow: 5px white;
+    border: 20px;
+    border-radius: 45px;
+    cursor: pointer;
 }
 
-.container > div ul li {
-    font-size: 18px;
-    color: rgb(70, 70, 70);
-    margin-top: 10px;
-    line-height: 1.6;
+
+
+.scroll-container {
+    display: flex;
+    overflow-x: auto; 
+    scroll-behavior: smooth; 
+    height: 100vh;
 }
 
-
-.container > div ul li a {
-    color: rgb(39, 174, 96);
-    text-decoration: none;
+.scroll-button {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(46, 46, 46, 0.5);
+    color: white;
+    border: none;
+    padding: 15px;
+    font-size: 35px;
+    cursor: pointer;
+    z-index: 999; 
 }
 
-.container > div ul li a:hover {
-    text-decoration: underline;
+.scroll-button.left {
+    left: 10px;
 }
 
+.scroll-button.right {
+    right: 10px;
+}
